Assinatura de página

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="status" id="status"></div>
     <div class="result-list" id="resultList"></div>
   </div>
-  <footer>Desenvolvido por um desenvolvedor web ultra experiente</footer>
+  <footer>Desenvolvido por Fabiano Pereira da Silva</footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.7.107/pdf.min.js"></script>
   <script>
