--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     function extractDateAndValue(text) {
       // Padrões específicos para comprovantes PIX/QR Code
-      const pixDatePattern = /data de vencimento:\s*(\d{2}\/\d{2}\/\d{4})/i;
+      const pixDatePattern = /data de pagamento:\s*(\d{2}\/\d{2}\/\d{4})/i;
       const pixValuePattern = /valor (final|da transação):\s*([\d.,]+)/i;
       
       let date = null;
